--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="box">
-        <img src="C:\Users\shamu\OneDrive\Pictures\WhatsApp Image 2025-12-10 at 09.22.27_7acbe191.jpg" alt="">
+        <img src="./sm.jpg" alt="">
         <hr>
         <h1>SIR M V I T</h1>
         <p>SMVIT , is a private engineering and management college in Yelahanka, Bangalore, established in 1986, known for offering B.E., MBA, and MCA programs under VTU affiliation, focusing on technical education with practical skills and good placements with companies like TCS, Wipro, and Infosys, emphasizing holistic development with a strong faculty and decent infrastructure.</p>
